syntax = "proto3";

package org.axe.platform.dapi.v0;

service Platform {
  rpc broadcastStateTransition (BroadcastStateTransitionRequest) returns (BroadcastStateTransitionResponse);
  rpc getIdentity (GetIdentityRequest) returns (GetIdentityResponse);
  rpc getDataContract (GetDataContractRequest) returns (GetDataContractResponse);
  rpc getDocuments (GetDocumentsRequest) returns (GetDocumentsResponse);
  rpc getIdentitiesByPublicKeyHashes (GetIdentitiesByPublicKeyHashesRequest) returns (GetIdentitiesByPublicKeyHashesResponse);
  rpc getIdentityIdsByPublicKeyHashes (GetIdentityIdsByPublicKeyHashesRequest) returns (GetIdentityIdsByPublicKeyHashesResponse);
}

message BroadcastStateTransitionRequest {
  bytes state_transition = 1;
}

message BroadcastStateTransitionResponse {

}

message GetIdentityRequest {
  bytes id = 1;
}

message GetIdentityResponse {
  bytes identity = 1;
}

message GetDataContractRequest {
  bytes id = 1;
}

message GetDataContractResponse {
  bytes data_contract = 1;
}

message GetDocumentsRequest {
  bytes data_contract_id = 1;
  string document_type = 2;

  bytes where = 3;
  bytes order_by = 4;

  uint32 limit = 5;

  oneof start {
    uint32 start_after = 6;
    uint32 start_at = 7;
  }
}

message GetDocumentsResponse {
  repeated bytes documents = 1;
}

message GetIdentitiesByPublicKeyHashesRequest {
  repeated bytes public_key_hashes = 1;
}

message GetIdentitiesByPublicKeyHashesResponse {
  repeated bytes identities = 1;
}

message GetIdentityIdsByPublicKeyHashesRequest {
  repeated bytes public_key_hashes = 1;
}

message GetIdentityIdsByPublicKeyHashesResponse {
  repeated bytes identity_ids = 1;
}
